[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentaudit_sdk"
version = "0.1.2"
description = "Compliance, governance & observability layer for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "AgentGuard Team"}
]
keywords = ["ai", "agents", "compliance", "governance", "observability", "openai", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pydantic>=2.0,<3.0",
    "openai>=1.0,<2.0",
]

[project.optional-dependencies]
anthropics = ["anthropic>=0.25,<1.0"]
presidio = [
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "spacy>=3.7,<4.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "anthropic>=0.25,<1.0",
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "spacy>=3.7,<4.0",
]

[project.urls]
Homepage = "https://github.com/AviraL0013/agentguard"
Repository = "https://github.com/AviraL0013/agentguard"

[project.scripts]
agentguard = "agentguard.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
